objects/LPDCR_Org_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>CC_Portal_Sign_Up_URL_Non_SSO_User__c</fullName>
        <description>URI behind the Sign-up button that appears on the Campaign Detail page on the Dealer Portal, for the Non-SSO User.</description>
        <label>CC Portal Sign Up URL (Non-SSO User)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CC_Portal_Sign_Up_URL_SSO__c</fullName>
        <description>URI behind the Sign-up button that appears on the Campaign Detail page on the Dealer Portal, for the SSO User.</description>
        <label>CC Portal Sign Up URL (SSO User)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DealerCommunity_BaseURL__c</fullName>
        <description>base url of the MyPurinaMills community</description>
        <label>DealerCommunity_BaseURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Dealer_Community_Logout_URL__c</fullName>
        <description>The destination users are taken to when they click Logout</description>
        <inlineHelpText>The destination users are taken to when they click Logout</inlineHelpText>
        <label>Dealer Community Logout URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enable_Web_Service_Caching__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Controlling flag to enable caching of web service calls to Kentico. When it is disabled, no caching will occur either at the Session or Org cache level, and a new web service call will be made each time.</description>
        <inlineHelpText>Controlling flag to enable caching of web service calls to Kentico. When it is disabled, no caching will occur either at the Session or Org cache level, and a new web service call will be made each time.</inlineHelpText>
        <label>Enable Web Service Caching</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kentico_Resource_URL_Prefix__c</fullName>
        <description>The URL that is prepended to resource source URLs returned from Kentico web services</description>
        <inlineHelpText>The URL that is prepended to resource source URLs returned from Kentico web services</inlineHelpText>
        <label>Kentico Resource URL Prefix</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Online_Order_Community_Base_URL__c</fullName>
        <description>The base URL of the online order community to connect to this orgs Dealer Community</description>
        <inlineHelpText>The base URL of the online order community to connect to this orgs Dealer Community</inlineHelpText>
        <label>Online Order Community Base URL</label>
        <type>Url</type>
    </fields>
    <label>LPDCR Org Settings</label>
</CustomObject>